examples/compiler_errors/adversarial/type_and_effect_modules/TypeBroken.flx
// expect: compile_error
// expect-error: E300

module TypeBroken {
    fn bad() -> Unit {
        let value: Int = "oops"
    }
}
